--- a/liste-courses.html
+++ b/liste-courses.html
@@ -51,12 +51,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 10px;
+            gap: 12px;
         }
 
         .app-logo {
-            width: 40px;
-            height: 40px;
+            width: 64px;
+            height: 64px;
             object-fit: contain;
         }
 
@@ -885,7 +885,7 @@
         <div class="header">
             <button class="settings-btn" onclick="openSettingsModal()" title="Paramètres">⚙️</button>
             <h1>
-                <img src="app-logo.png" alt="Logo" class="app-logo">
+                <img src="app-logo-64.png" alt="Logo" class="app-logo">
                 Ma Liste de Courses
             </h1>
             <p>
