--- a/liste-courses.html
+++ b/liste-courses.html
@@ -884,10 +884,9 @@
     <div class="container">
         <div class="header">
             <button class="settings-btn" onclick="openSettingsModal()" title="Paramètres">⚙️</button>
-            <h1>
-                <img src="app-logo-64.png" alt="Logo" class="app-logo">
-                Ma Liste de Courses
-            </h1>
+            <div style="display: flex; justify-content: center; margin-bottom: 15px;">
+                <img src="header-logo.png" alt="Ma Liste de Courses" style="width: 120px; height: 120px; object-fit: contain;">
+            </div>
             <p>
                 Organisez vos achats facilement
                 <span class="update-status" onclick="checkForUpdates()" title="Vérifier les mises à jour">
