--- a/liste-courses.html
+++ b/liste-courses.html
@@ -335,6 +335,7 @@
             cursor: pointer;
             transition: all 0.2s;
             margin-left: 8px;
+            margin-right: 12px;
         }
 
         .quantity-badge:hover {
